	* fixed g_list_position() call to have nested g_list_find() in ags_polling_thread.c
	* fixed missing return in ags_destroy_entry_alloc()
	* fixed AGS_TASK_GET_CLASS() macro to remove not opened paranthesis
	* fixed ags_thread_init() to correct assign condition manager
	* fixed AGS_FILE_CHECKSUM_LENGTH macro to use string representation length
	* extended chap3.xml to include documentation about workers
	* extended chap3.xml to include documentation about poll fds
	* extended chap3.xml to include documentation about mutex and condition managers
	* new unit-test ags_complex_test.c
	* new unit-test ags_turtle_manager_test.c
	* new unit-test ags_log_test.c
	* new unit-test ags_application_context_test.c
	* new unit-test ags_connection_manager_test.c
	* new unit-test ags_config_test.c
	* new unit-test ags_condition_manager_test.c
	* new unit-test ags_mutex_manager_test.c
	* new unit-test ags_destroy_worker_test.c
	* new unit-test ags_polling_thread_test.c
	* new unit-test ags_poll_fd_test.c
	* new unit-test ags_returnable_thread_test.c
	* new unit-test ags_task_test.c
	* new unit-test ags_thread_pool_test
	* new unit-test ags_worker_thread_test
	* new unit-test ags_file_test
	* new unit-test ags_file_id_ref_test
	* new unit-test ags_file_launch_test
	* new unit-test ags_dssi_plugin_test.c
	* new unit-test ags_dssi_manager_test.c
	* new unit-test ags_base_plugin_test.c

ags (0.8.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed orphaned AgsAudio after removing all soundcards to add again

ags (0.8.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented move note task
	* implmeneted crop note task
	* implemented all task's finalize function
	* improved all task's to use properties to instantiate

ags (0.8.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsMoveNoteDialog as additional editing tool
	* implemented AgsCropNoteDialog as additional editing tool